[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pyping>=0.0.6",
    "requests>=2.32.5",
    "transformers>=4.57.5",
    "typing>=3.10.0.0",
]
