[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dashscope>=1.25.9",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "openai>=2.15.0",
]
