[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chroma>=0.2.0",
    "chromadb>=1.4.1",
    "dashscope>=1.25.9",
    "dingtalk-stream>=0.24.3",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "streamlit>=1.53.1",
    "unstructured>=0.18.27",
]
