[project]
name = "agent"
version = "0.1.0"
description = "Your project description"
authors = [
  { name="zhangdezhi", email="xxx@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # 这里写依赖，例如：
    "numpy",
    "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
