[project]
name = "mylanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dashscope>=1.25.11",
    "ipython>=9.10.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "pyppeteer>=2.0.0",
]
